# Exam6

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/: Element.h  Matrix.h  Proxy.h
src/: CMakeLists.txt  Matrix.cpp
tests/: CMakeLists.txt  tesst.cpp
